--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     max-width:1000px; max-height:100%; width:100%; margin-bottom: -4px;
   }
   </style>
-    <div><a href="https://m.cafe.naver.com/shinee7m"><img class="maindiv" src="1.gif"></a></div>
-    <div><a href="https://m.cafe.naver.com/shinee7m"><img class="maindiv" src="2.gif"></a></div>
-    <div><a href="https://m.cafe.naver.com/shinee7m"><img class="maindiv" src="./3.gif"></a></div>
-    <div><a href="https://m.cafe.naver.com/shinee7m"><img class="maindiv" src="./section1.gif"></a></div>
-    <div><a href="https://m.cafe.naver.com/shinee7m"><img class="maindiv" src="./3.gif"></a></div>
+    <div><a href="https://m.cafe.naver.com/shinee7m"><img class="maindiv" src="img/1.gif"></a></div>
+    <div><a href="https://m.cafe.naver.com/shinee7m"><img class="maindiv" src="img/2.gif"></a></div>
+    <div><a href="https://m.cafe.naver.com/shinee7m"><img class="maindiv" src="img/3.gif"></a></div>
+    <div><a href="https://m.cafe.naver.com/shinee7m"><img class="maindiv" src="img/section1.gif"></a></div>
+    <div><a href="https://m.cafe.naver.com/shinee7m"><img class="maindiv" src="img/3.gif"></a></div>
     <div>
     </div></div></center>
   
