--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 				<div class="domain_title">우주티비 <strong>평생도메인</strong> 안내</div>
 				<div class="domain_btn">
 					<ul>
-						<li><a href="https://wjtv1.com/" target="_blank"><span>우주티비 바로가기</span>우주.tv</a></li>
-						<li><a href="https://t.me/wjtv24" target="_blank"><span>제휴&영상 문의는</span>고객센터</a></li>
+						<li><a href="https://wjtv1.com/"><span>우주티비 바로가기</span>우주.tv</a></li>
+						<li><a href="https://t.me/wjtv24"><span>제휴&영상 문의는</span>고객센터</a></li>
 					</ul>
 				</div>
 				<div class="domain_text"><span>언제 어디서나</span> 실시간 스포츠중계<span> 우주티비</span> 평생주소</div>
