--- a/unused.html
+++ b/unused.html
@@ -1,4 +1,4 @@
-<html lang="ko"><head>
+<!-- <html lang="ko"><head>
     <meta name="naver-site-verification" content="fde994f8dce73201ca5b1d0519734e029373e8e6">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -9,7 +9,7 @@
     <meta property="og:description" content="진짜 분석은 이런 것이다.">
     <link rel="apple-touch-icon" href="img/favicon.ico">
     <link rel="icon" href="img/favicon.ico">
-  <!-- Google tag (gtag.js) -->
+
       <title>별빛분석</title>
     </head>
     <body style="background-color: black;"><center>
@@ -19,7 +19,7 @@
     max-width:1000px; max-height:100%; width:100%; margin-bottom: -4px;
   }
   </style>
-<!--     <div><a href="https://m.cafe.naver.com/shinee7m"><img class="maindiv" src="img/1.gif"></a></div> -->
+
     <div><a href="http://별빛분석.com"><img class="maindiv" src="img/2.gif"></a></div>
     <div><a href="http://별빛분석.com"><img class="maindiv" src="img/3.gif"></a></div>
     <div><a href="http://별빛분석.com"><img class="maindiv" src="img/section1.gif"></a></div>
@@ -28,3 +28,4 @@
     </div></div></center>
   
     </body></html>
+ -->
